# ghtaskhub

./: README.md  setup.cfg  setup.py
.github/scripts/: actionable.py  add_bucket.py  create_project.py  move_card_to_done.py  sync.py
.github/workflows/: actionable.yml  bucket.yml  create_project.yml  move_cards_to_done.yml  sync.yml
gh_taskhub/: _utils.py  add_bucket.py  create_project.py  move.py  sync.py
gh_taskhub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ghtaskhub/: __init__.py  add.py  add_bucket.py  columns.py  create_project.py  delete.py  move.py  sync.py
ghtaskhub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
