[metadata]
name = gh_taskhub
version = 0.0.1
description = Controlling projects in your taskhub
license = MIT
author = Thomas J. Fan
author_email = thomasjpfan@gmail.com
url = https://github.com/thomasjpfan/taskhub
long_description = file: README.md

[options]
packages = find:
install_requires =
    ghapi
    PyGithub

[options.entry_points]
console_scripts =
    ghtaskhub = gh_taskhub:main

